--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
       <p id="pesanAkhir"></p>
       <p id="teksLucu"></p>
     </div>
-    <button id="tombolLanjut" onclick="nextHal3()">Lanjut</button>
+    <button id="tombolLanjut" onclick="nextHal3()">LesssGo</button>
   </div>
   <div class="tombol">
-    <button onclick="balasWa()">Balas</button>
+    <button onclick="balasWa()">Send</button>
   </div>
 
   <span id="teksSembunyi1">Eh, I mean right</span>
